tests/fsharp/core/auto-widen/preview/test.bsl

test.fsx(58,22,58,24): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(59,22,59,23): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(60,28,60,29): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(60,30,60,31): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(60,32,60,33): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(60,34,60,35): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(61,28,61,29): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(61,30,61,31): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(61,32,61,33): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(61,34,61,35): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(62,30,62,31): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float32'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(62,32,62,33): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float32'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(62,34,62,35): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float32'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(62,36,62,37): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'float32'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(63,22,63,43): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(64,28,64,49): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(64,50,64,71): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(68,22,68,25): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(68,22,68,25): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(69,26,69,29): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(69,26,69,29): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(93,18,93,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(93,18,93,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(99,20,99,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(99,20,99,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(116,20,116,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(121,19,121,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(121,19,121,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(122,19,122,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(122,22,122,23): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(127,19,127,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'double'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(127,19,127,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'double'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(128,19,128,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'double'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(128,22,128,23): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'double'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(135,18,135,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'C'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(140,18,140,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'int64'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(145,18,145,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'decimal'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(147,18,147,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'decimal'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(149,39,149,41): typecheck error FS3386: This expression uses an implicit conversion to convert type 'string' to type 'Xml.Linq.XNamespace'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(154,18,154,20): typecheck error FS3386: This expression uses an implicit conversion to convert type 'string' to type 'Xml.Linq.XNamespace'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(159,18,159,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'string' to type 'Xml.Linq.XName'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(165,18,165,19): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'C'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(172,18,172,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'Y' to type 'X'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(172,18,172,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'Y' to type 'X'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(178,20,178,21): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'C<int>'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(180,15,180,16): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'C<int>'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(186,27,186,28): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'Nullable<int>'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(188,15,188,16): typecheck error FS3386: This expression uses an implicit conversion to convert type 'int' to type 'Nullable<int>'. Warnings are enabled for implicit conversions. Consider using an explicit conversion or disabling this warning.

test.fsx(315,7,315,22): typecheck error FS0001: This expression was expected to have type
    'unit'    
but here has type
    'obj'    

test.fsx(317,32,317,35): typecheck error FS0193: Type constraint mismatch. The type 
    'float'    
is not compatible with type
    'int'    

